bort med java-mem-tweaks, whitespace, simple och ändra tillbaka skip-aot på run